LIST OF CHANGES
---------------

release 51.10.2
 - use bwa aln for human split with tophat target alignment

release 51.10.1
 - Modified qc run function list, removed copy_interop and switched archive_to_irods to samplesheet
 
release 51.10
 - Chained execution of RNA-SeQC to the vtfp/viv alignment cmd for RNA-Seq libraries only:
     entries for qc check rna_seqc removed from central function and parallelisation.
     code that created rna_seqc-specific directories has been removed as this is
     now handled by the check itself using qc_out arg.
 - remove GCLP-specific code and configuration files
 - remove unused force_p4 attribute
 - OLB analysis removed
 - recalibration removed
 - pb_cal_path and dif_files_path accessors disabled
 - allow p4 stage 1 to analyse runs with different length reads
 - illumina2bam function removed
 - update p4 stage 2 (seq_alignment) warn rather than croak if multiple references for tag 0
 - update p4 stage 2 (seq_alignment) to use bambi chrsplit instead of SplitBamByChromosomes.jar for Y-split runs
 - pipeline scripts - redirect stderr output to the log to capture output from all
   NPG and CPAN modules in one place

release 51.9
 - p4stage2 speed-up by caching references
 - p4stage2 errors in getting a reference made fatal
 - iRODS publish script new options: (1) --restart_file to pin the script's
     process file name to a particular LSF job, (2) --max_errors to force the script to
     fail after certain number of errors (10 specified in the configuration file)
 - seqchksum_comparator test fixed for gseq by generating a cram file with a header
   that lists a reference available on gseq and supressing an outside search by
   setting REF_PATH to an invalid value; the test will continue to work on hosts
   where REF_PATH i sset and available
 - consistent computation of absolute path, which takes account of substitution

release 51.8
 - when comparing checksums, generate seqchksums for each cram file and merge