@@ -243,7 +243,7 @@ sub _lsf_alignment_command { ## no critic (Subroutines::ProhibitExcessComplexity
                     $l->separate_y_chromosome_data    ? q(yhuman) :
                     q();
 
-  my $do_target_alignment = ($self->_ref($l,q(fasta)) and $l->alignments_in_bam);
+  my $do_target_alignment = ($self->_ref($l,q(fasta)) and $l->alignments_in_bam and not ($l->library_type && $l->library_type =~ /Chromium/smx));
   my $nchs = $l->contains_nonconsented_human;
   my $nchs_template_label = q{};
   if($nchs) {
@@ -268,7 +268,7 @@ sub _lsf_alignment_command { ## no critic (Subroutines::ProhibitExcessComplexity
   #   separate templates, so these steps do not apply.
   ########
   my @no_tgt_aln_flags = ();
-  if((not $self->_ref($l,q(fasta)) or not $l->alignments_in_bam) and not $nchs and not $spike_tag) {
+  if((not $self->_ref($l,q(fasta)) or not $l->alignments_in_bam or ($l->library_type && $l->library_type =~ /Chromium/smx)) and not $nchs and not $spike_tag) {
 
     push @no_tgt_aln_flags,
       q[-splice_nodes '"'"'src_bam:-alignment_filter:__PHIX_BAM_IN__'"'"'],
