@@ -2,17 +2,6 @@
 Lane,Sample_ID,Sample_Name,GenomeFolder,Index,bait_name,default_library_type,default_tag_sequence,email_addresses,email_addresses_of_followers,email_addresses_of_managers,email_addresses_of_owners,is_control,is_pool,lane_id,lane_priority,library_name,organism,organism_taxon_id,project_cost_code,project_id,project_name,qc_state,request_id,required_insert_size_range,sample_accession_number,sample_cohort,sample_common_name,sample_consent_withdrawn,sample_description,sample_donor_id,sample_id,sample_name,sample_public_name,sample_reference_genome,sample_supplier_name,spiked_phix_tag_index,study_accession_number,study_alignments_in_bam,study_contains_nonconsented_human,study_contains_nonconsented_xahuman,study_description,study_id,study_name,study_reference_genome,study_separate_y_chromosome_data,study_title,tag_index,
 1,14208347,EGAN00001099789,,ATCACGTT,,Standard,ATCACGTT,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099789,,Homo Sapien,,,,1582484,SC_SEPI5488629,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,1,
 1,14208348,EGAN00001099799,,GATCAGCG,,Standard,GATCAGCG,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099799,,Homo Sapien,,,,1582494,SC_SEPI5488639,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,9,
-1,14208349,EGAN00001099809,,TGTACCTT,,Standard,TGTACCTT,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099809,,Homo Sapien,,,,1582504,SC_SEPI5488649,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,17,
-1,14208350,EGAN00001099818,,TGCGATCT,,Standard,TGCGATCT,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099818,,Homo Sapien,,,,1582513,SC_SEPI5488658,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,25,
-1,14208351,EGAN00001099828,,TCGAAGTG,,Standard,TCGAAGTG,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099828,,Homo Sapien,,,,1582523,SC_SEPI5488668,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,33,
-1,14208352,EGAN00001099841,,TCCAGTCG,,Standard,TCCAGTCG,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099841,,Homo Sapien,,,,1582536,SC_SEPI5488681,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,41,
-1,14208353,EGAN00001099849,,TGTCTATC,,Standard,TGTCTATC,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099849,,Homo Sapien,,,,1582545,SC_SEPI5488690,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,49,
-1,14208354,EGAN00001099861,,TCTACGAC,,Standard,TCTACGAC,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099861,,Homo Sapien,,,,1582557,SC_SEPI5488702,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,57,
-1,14208355,EGAN00001099870,,TTGTTCCA,,Standard,TTGTTCCA,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099870,,Homo Sapien,,,,1582566,SC_SEPI5488711,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,65,
-1,14208356,EGAN00001099882,,GCAACATT,,Standard,GCAACATT,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099882,,Homo Sapien,,,,1582578,SC_SEPI5488723,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,73,
-1,14208357,EGAN00001099890,,GGAATGAT,,Standard,GGAATGAT,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099890,,Homo Sapien,,,,1582586,SC_SEPI5488731,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,81,
-1,14208358,EGAN00001099901,,GTGTGTCG,,Standard,GTGTGTCG,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099901,,Homo Sapien,,,,1582597,SC_SEPI5488742,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,89,
-1,12172503,phiX_for_spiked_buffers,,ACAACGCAATC,,,ACAACGCAATC,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiXBPS24Oct14,,10847,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,888,,1,0,0,None,198,Illumina Controls,,,,888,
 2,14208359,EGAN00001099790,,CGATGTTT,,Standard,CGATGTTT,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099790,,Homo Sapien,,,,1582485,SC_SEPI5488630,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,2,
 2,14208360,EGAN00001099800,,TAGCTTGT,,Standard,TAGCTTGT,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099800,,Homo Sapien,,,,1582495,SC_SEPI5488640,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,10,
 2,14208361,EGAN00001099810,,TTCTGTGT,,Standard,TTCTGTGT,dw2@sanger.ac.uk eag@sanger.ac.uk ez1@sanger.ac.uk njl@sanger.ac.uk,dw2@sanger.ac.uk njl@sanger.ac.uk,eag@sanger.ac.uk,ez1@sanger.ac.uk,0,0,,,,,9606,S0823,1865,15X WGS ISOLATES     ,,,from:450 to:450,EGAN00001099810,,Homo Sapien,,,,1582505,SC_SEPI5488650,,,,888,EGAS00001001208,1,0,0,15x whole genome sequencing in samples from the Greek isolated collection HELIC Pomak.,3597,IHTP_MWGS_HELICPomak,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),,15x WGS HELIC Pomak,18,
