@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - no alignments for chromium libraries
+
 release 51.10.2
  - use bwa aln for human split with tophat target alignment
 
